--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@mui/material": "latest",
     "@tanstack/react-query": "latest",
     "@testing-library/react": "^14.0.0",
+    "@types/firebase": "^3.2.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "firebase": "^10.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
